--- a/app/src/main/res/layout/coworker_g_item.xml
+++ b/app/src/main/res/layout/coworker_g_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
     android:layout_height="150dp"
     android:layout_marginRight="15dp"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pic"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:src="@mipmap/default_avatar" />
 
@@ -19,18 +19,33 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Emmanuel"
-        android:id="@+id/name"
-        android:layout_below="@+id/pic"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="2dp"
+        android:gravity="center_horizontal"
+        android:id="@+id/name"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/summary"
-        android:layout_below="@+id/name"
-        android:layout_alignEnd="@+id/pic"
-        android:layout_gravity="center" />
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+        <ImageView
+            android:layout_width="23dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:src="@drawable/ic_connection"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:id="@+id/summary"
+            android:gravity="center_horizontal"/>
+
+    </LinearLayout>
+
+
+</LinearLayout>
