--- a/app/src/main/res/layout/activity_line_goal_view.xml
+++ b/app/src/main/res/layout/activity_line_goal_view.xml
@@ -73,7 +73,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="10dp"
                     android:src="@drawable/add_icon" />
 
                 <ImageView
@@ -173,7 +173,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                android:background="@android:color/darker_gray" />
+                android:background="@color/light_gray" />
 
             <RelativeLayout
                 android:id="@+id/goals_layout"
@@ -229,7 +229,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                android:background="@android:color/darker_gray" />
+                android:background="@color/light_gray" />
 
             <RelativeLayout
                 android:id="@+id/territory_layout"
@@ -285,7 +285,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
-                android:background="@android:color/darker_gray" />
+                android:background="@color/light_gray" />
 
 
             <LinearLayout
