--- a/app/src/main/res/layout/schedule_clients_suggestion_list_item.xml
+++ b/app/src/main/res/layout/schedule_clients_suggestion_list_item.xml
@@ -85,6 +85,6 @@
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:layout_marginLeft="12dp"
-        android:background="@android:color/darker_gray" />
+        android:background="@color/light_gray" />
 
 </LinearLayout>
