--- a/app/src/main/res/layout/schedule_select_client_list_item.xml
+++ b/app/src/main/res/layout/schedule_select_client_list_item.xml
@@ -98,6 +98,6 @@
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:layout_marginLeft="0dp"
-        android:background="@android:color/darker_gray" />
+        android:background="@color/light_gray" />
 
 </LinearLayout>
