--- a/app/src/main/res/layout/schedule_timeline_list_item.xml
+++ b/app/src/main/res/layout/schedule_timeline_list_item.xml
@@ -2,94 +2,95 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:orientation="horizontal"
-                  android:background="@color/white">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="horizontal">
 
-    <LinearLayout
+        <LinearLayout
             android:id="@+id/date"
             android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:paddingTop="10dp"
+            android:layout_centerVertical="true"
             android:orientation="vertical"
-            android:layout_centerVertical="true">
+            android:paddingTop="10dp">
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <TextView
                 android:id="@+id/day"
-                android:textColor="#000000"
-                android:layout_gravity="center_horizontal"
-                android:text=""
-                android:textStyle="bold"
-                android:textSize="20sp" />
-
-        <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/week_day"
-
-                android:layout_gravity="center_horizontal"
-                android:textColor="@color/schedule_title_bg_color"
+                android:gravity="center_horizontal"
                 android:text=""
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/week_day"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text=""
+                android:textColor="@color/schedule_title_bg_color"
                 android:textSize="9sp" />
 
 
-    </LinearLayout>
+        </LinearLayout>
+
         <RelativeLayout
             android:id="@+id/invite_layout"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:paddingBottom="10dp"
             android:paddingTop="10dp">
+
             <LinearLayout
                 android:id="@+id/timeline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="5dp"
-
                 android:paddingLeft="15dp"
-            />
+                android:paddingTop="5dp" />
         </RelativeLayout>
+
         <LinearLayout
-                android:id="@+id/weather_info"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:paddingTop="10dp"
-                android:orientation="horizontal">
+            android:id="@+id/weather_info"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal"
+            android:paddingTop="10dp">
 
             <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/temperature"
-                    android:gravity="center_vertical"
-                    android:layout_marginRight="3dp"
-                    android:text=""
-                    android:textStyle="bold"
-                    android:textColor="@color/schedule_title_bg_color"
-                    android:textSize="12sp" />
+                android:id="@+id/temperature"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="3dp"
+                android:gravity="center_vertical"
+                android:text=""
+                android:textColor="@color/schedule_title_bg_color"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:id="@+id/weather"
-                    android:gravity="center_vertical"
-                    android:text=""
-                    android:layout_marginRight="10dp"
-                    android:textColor="#8a8787"
-                    android:textSize="10sp" />
+                android:id="@+id/weather"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:gravity="center_vertical"
+                android:text=""
+                android:textColor="#8a8787"
+                android:textSize="10sp" />
 
 
         </LinearLayout>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
