--- a/app/src/main/res/layout/fragment_profile_new.xml
+++ b/app/src/main/res/layout/fragment_profile_new.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@drawable/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
             android:id="@+id/top_layout"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:background="@color/button_bg">
+            android:background="@android:color/transparent">
 
             <TextView
                 android:id="@+id/txt_signup_label"
@@ -59,14 +59,14 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15dp"
-                android:src="@mipmap/icon_edit" />
+                android:src="@drawable/ic_profile_edit" />
 
         </RelativeLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:background="@color/button_bg">
+            android:layout_height="200dp"
+            android:background="@android:color/transparent">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/vpProfile"
@@ -80,70 +80,116 @@
                 android:layout_gravity="bottom" />
         </FrameLayout>
 
-        <Button
-            android:id="@+id/btnEditPersonalInfo"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_arrow_gray"
-            android:gravity="left"
-            android:padding="20dp"
-            android:text="@string/edit_personal_info"
-            android:textAllCaps="false"
-            android:textColor="@color/grey" />
+            android:background="@android:color/white"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/btnEditPersonalInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/ivArrow1"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical|left"
+                android:text="@string/edit_personal_info"
+                android:textAllCaps="false"
+                android:textColor="@color/grey" />
+
+            <ImageView
+                android:id="@+id/ivArrow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_arrow_gray" />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ababab"></View>
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"></View>
 
-        <Button
-            android:id="@+id/btnNotifications"
+        <RelativeLayout
+            android:id="@+id/rlNotifications"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_arrow_gray"
-            android:gravity="left"
-            android:padding="20dp"
-            android:text="@string/notifications"
-            android:textAllCaps="false"
-            android:textColor="@color/grey" />
+            android:background="@android:color/white"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/btnNotifications"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/ivArrow2"
+                android:background="@android:color/transparent"
+                android:gravity="left|center_vertical"
+                android:text="@string/notifications"
+                android:textAllCaps="false"
+                android:textColor="@color/grey" />
+
+            <ImageView
+                android:id="@+id/ivArrow2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_arrow_gray" />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ababab"></View>
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"></View>
 
-        <Button
-            android:id="@+id/btnChangePassword"
+
+        <RelativeLayout
+            android:id="@+id/rlChangePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_arrow_gray"
-            android:gravity="left"
-            android:padding="20dp"
-            android:text="@string/change_password"
-            android:textAllCaps="false"
-            android:textColor="@color/grey" />
+            android:background="@android:color/white"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/btnChangePassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/ivArrow3"
+                android:background="@android:color/transparent"
+                android:gravity="left|center_vertical"
+                android:text="@string/change_password"
+                android:textAllCaps="false"
+                android:textColor="@color/grey" />
+
+            <ImageView
+                android:id="@+id/ivArrow3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_arrow_gray" />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ababab"></View>
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"></View>
 
         <RelativeLayout
             android:id="@+id/rlIndustries"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp">
+            android:background="@android:color/white"
+            android:padding="10dp">
 
             <Button
                 android:id="@+id/btnIndustries"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/tvIndustries"
                 android:layout_centerVertical="true"
-                android:padding="0dp"
+                android:layout_toLeftOf="@+id/tvIndustries"
                 android:background="@android:color/transparent"
                 android:gravity="left|center_vertical"
                 android:text="@string/industries"
@@ -157,12 +203,12 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:textColor="@color/grey"
-                android:layout_toLeftOf="@+id/ivArrow"
-                android:text="4" />
+                android:layout_toLeftOf="@+id/ivArrow4"
+                android:text="4"
+                android:textColor="@color/grey" />
 
             <ImageView
-                android:id="@+id/ivArrow"
+                android:id="@+id/ivArrow4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -173,59 +219,109 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ababab"></View>
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"></View>
 
-        <Button
-            android:id="@+id/btnPrivacy"
+
+        <RelativeLayout
+            android:id="@+id/rlPrivacy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_arrow_gray"
-            android:gravity="left"
-            android:padding="20dp"
-            android:text="@string/privacy"
-            android:textAllCaps="false"
-            android:textColor="@color/grey" />
+            android:background="@android:color/white"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/btnPrivacy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/ivArrow5"
+                android:background="@android:color/transparent"
+                android:gravity="left|center_vertical"
+                android:text="@string/privacy"
+                android:textAllCaps="false"
+                android:textColor="@color/grey" />
+
+            <ImageView
+                android:id="@+id/ivArrow5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_arrow_gray" />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ababab"></View>
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"></View>
 
-        <Button
-            android:id="@+id/btnHelp"
+
+        <RelativeLayout
+            android:id="@+id/rlHelp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_arrow_gray"
-            android:gravity="left"
-            android:padding="20dp"
-            android:text="@string/help"
-            android:textAllCaps="false"
-            android:textColor="@color/grey" />
+            android:background="@android:color/white"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/btnHelp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/ivArrow6"
+                android:background="@android:color/transparent"
+                android:gravity="left|center_vertical"
+                android:text="@string/help"
+                android:textAllCaps="false"
+                android:textColor="@color/grey" />
+
+            <ImageView
+                android:id="@+id/ivArrow6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_arrow_gray" />
+        </RelativeLayout>
+
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ababab"></View>
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"></View>
 
-        <Button
-            android:id="@+id/btnLogout"
+
+        <RelativeLayout
+            android:id="@+id/rlLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:drawableRight="@drawable/ic_arrow_gray"
-            android:gravity="left"
-            android:padding="20dp"
-            android:text="@string/logout"
-            android:textAllCaps="false"
-            android:textColor="@color/grey" />
+            android:background="@android:color/white"
+            android:padding="10dp">
+
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/ivArrow7"
+                android:background="@android:color/transparent"
+
+                android:gravity="left|center_vertical"
+                android:text="@string/logout"
+                android:textAllCaps="false"
+                android:textColor="@color/grey" />
+
+            <ImageView
+                android:id="@+id/ivArrow7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_arrow_gray" />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ababab"></View>
+            android:layout_height="0.1dp"
+            android:background="@color/light_gray"></View>
 
     </LinearLayout>
 
