--- a/app/src/main/res/layout/profile3.xml
+++ b/app/src/main/res/layout/profile3.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -9,35 +8,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="20dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
 
             <TextView
-                android:id="@+id/string"
+                android:id="@+id/tvSales"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="25dp"
-                android:text="OVERALL SALES RECORD"
-                android:textSize="22sp"
+                android:layout_marginTop="10dp"
+                android:text="OVERALL SALES THIS MONTH"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_below="@+id/string"
+                android:id="@+id/llSales"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvSales"
                 android:gravity="center"
-                android:layout_height="wrap_content">
+                android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="$"
                     android:paddingRight="10dp"
+                    android:text="$"
                     android:textColor="@color/white"
                     android:textSize="30sp" />
 
@@ -46,10 +47,18 @@
                     android:layout_height="wrap_content"
                     android:text="25,191"
                     android:textColor="@color/white"
-                    android:textSize="70sp" />
+                    android:textSize="50sp" />
             </LinearLayout>
 
         </RelativeLayout>
+
+        <Button
+            android:id="@+id/btnViewDetails"
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_btn_view_details"
+            android:text="View Detail" />
     </LinearLayout>
 
 </LinearLayout>
