--- a/app/src/main/res/layout/coworker_g_item.xml
+++ b/app/src/main/res/layout/coworker_g_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
+    android:layout_width="180dp"
+    android:layout_height="180dp"
     android:layout_marginRight="15dp"
     android:orientation="vertical"
     android:padding="10dp">
@@ -21,6 +21,7 @@
         android:text="Emmanuel"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="2dp"
+        android:textColor="@android:color/black"
         android:gravity="center_horizontal"
         android:id="@+id/name"/>
 
@@ -32,8 +33,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="23dp"
-            android:layout_height="wrap_content"
+            android:layout_width="13dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:src="@drawable/ic_connection"/>
 
@@ -43,6 +45,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Small Text"
             android:id="@+id/summary"
+            android:textColor="@android:color/black"
             android:gravity="center_horizontal"/>
 
     </LinearLayout>
