--- a/app/src/main/res/layout/activity_coworker.xml
+++ b/app/src/main/res/layout/activity_coworker.xml
@@ -24,6 +24,7 @@
             android:textStyle="bold" />
 
         <LinearLayout
+            android:onClick="onClick"
             android:id="@+id/back_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
