- cleaning up clien

--- a/app/src/main/res/layout/fragment_create_client.xml
+++ b/app/src/main/res/layout/fragment_create_client.xml
@@ -429,7 +429,7 @@
                         android:id="@+id/industry"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/add_industry"
+                        android:text="Click to choose industry"
                         android:textColor="@color/schedule_title_bg_color"
                         android:textStyle="bold" />
 
