--- a/app/src/main/res/layout/activity_line_add.xml
+++ b/app/src/main/res/layout/activity_line_add.xml
@@ -119,7 +119,7 @@
         android:gravity="center_vertical"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
-        android:text="ADD LINE    >"
+        android:text="ADD LINE"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold" />
