--- a/app/src/main/res/layout/fragment_sign_up_settings.xml
+++ b/app/src/main/res/layout/fragment_sign_up_settings.xml
@@ -39,7 +39,7 @@
             android:ems="10"
             android:id="@+id/re_order" />
 
-        <DatePicker
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/birthday"
