--- a/app/src/main/res/layout/fragment_view_client.xml
+++ b/app/src/main/res/layout/fragment_view_client.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/background_layout">
 
         <TextView
-            android:id="@+id/txt_signup_label"
+            android:id="@+id/client_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -43,10 +43,12 @@
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
+                android:onClick="goBack"
                 android:src="@mipmap/btn_back_arrow" />
 
             <TextView
                 android:id="@+id/txt_back"
+                android:onClick="goBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
