--- a/app/src/main/res/layout/activity_sale_client_sale_details.xml
+++ b/app/src/main/res/layout/activity_sale_client_sale_details.xml
@@ -20,21 +20,34 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:id="@+id/img_plus"
+            android:src="@mipmap/plus_thin"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="15dp" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:id="@+id/img_filter"
             android:src="@mipmap/ic_filter_map"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:layout_alignParentRight="true" />
+            android:layout_toLeftOf="@+id/img_plus"
+            android:layout_marginRight="10dp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CREATIVE CO-OP"
-            android:id="@+id/textView5"
-            android:textSize="20dp"
+            android:id="@+id/txt_selected_client"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:text="Addison LLC"
+            style="@style/EditTextStyle"
             android:textStyle="bold"
-            android:layout_centerInParent="true" />
-
+            android:textSize="20dp"
+            android:textColor="@color/white"
+            android:gravity="center_vertical|center_horizontal"
+            android:layout_toRightOf="@+id/img_back"
+            android:layout_toLeftOf="@+id/img_filter" />
     </RelativeLayout>
 
     <LinearLayout
@@ -47,7 +60,7 @@
         <LinearLayout
             android:id="@+id/total_sale_layout"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:background="@color/off_white"
             android:orientation="horizontal">
 
@@ -62,7 +75,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="2016"
+                    android:text="July 2016"
                     android:id="@+id/txt_year"
                     android:textColor="@color/schedule_title_bg_color"
                     android:textStyle="bold"
@@ -71,7 +84,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="450 clients"
+                    android:text="450 sales"
                     android:id="@+id/txt_count"
                     android:textColor="@color/schedule_title_bg_color"
                     android:layout_marginTop="2dp"
@@ -89,22 +102,23 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="$257,123,9000"
-                    android:id="@+id/txt_total_price"
-                    android:gravity="right"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:textColor="@color/green_color1" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Total sales"
+                    android:text="Revenue Total"
                     android:id="@+id/lblTotalPrice"
                     android:textColor="@color/schedule_title_bg_color"
                     android:gravity="right"
                     android:layout_marginTop="2dp"
                     android:textSize="14dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="$15,980,123,000"
+                    android:id="@+id/txt_total_price"
+                    android:gravity="right"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:textColor="@color/green_color1"
+                    style="@style/EditTextStyle" />
             </LinearLayout>
         </LinearLayout>
 
@@ -116,7 +130,8 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/lines_listview" />
+            android:id="@+id/client_sales_listview"
+            android:background="@color/light_grey3" />
     </LinearLayout>
 
 </RelativeLayout>
