--- a/app/src/main/res/layout/activity_sale_filter.xml
+++ b/app/src/main/res/layout/activity_sale_filter.xml
@@ -17,7 +17,8 @@
             android:layout_centerVertical="true"
             android:text="Reset"
             android:textSize="17dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -28,7 +29,8 @@
             android:layout_alignParentRight="true"
             android:text="Cancel"
             android:textSize="17dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,7 +39,8 @@
             android:id="@+id/textView5"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
