--- a/app/src/main/res/layout/activity_sale_print_report.xml
+++ b/app/src/main/res/layout/activity_sale_print_report.xml
@@ -24,7 +24,8 @@
             android:id="@+id/textView5"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
