--- a/app/src/main/res/layout/fragment_sale_home.xml
+++ b/app/src/main/res/layout/fragment_sale_home.xml
@@ -4,43 +4,78 @@
     android:layout_height="match_parent"
     android:background="@mipmap/background_green">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="54dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/img_printer"
-            android:src="@mipmap/printer"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="54dp">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/img_plus"
-            android:src="@mipmap/plus_thin"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="15dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/img_printer"
+                android:src="@mipmap/printer"
+                android:layout_marginLeft="10dp"
+                android:layout_centerVertical="true" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/img_filter"
-            android:src="@mipmap/ic_filter_map"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/img_plus"
-            android:layout_marginRight="10dp" />
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/img_plus"
+                android:src="@mipmap/plus_thin"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp" />
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:id="@+id/img_segment"
-            android:layout_centerInParent="true" />
-    </RelativeLayout>
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/img_filter"
+                android:src="@mipmap/ic_filter_map"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/img_plus"
+                android:layout_marginRight="10dp" />
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="40dp"
+                android:id="@+id/img_segment"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/sub_layout"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="66dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="$1,500.54"
+                android:id="@+id/textView10"
+                style="@style/EditTextStyle"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="30dp"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="All time sales : 50 clients Total"
+                android:id="@+id/textView11"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                style="@style/EditTextStyle"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/line_layout"
@@ -93,7 +128,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/top_layout">
+        android:layout_below="@+id/top_layout"
+        android:background="@color/white">
 
         <ListView
             android:layout_width="match_parent"
