--- a/app/src/main/res/layout/fragment_sale_view_all.xml
+++ b/app/src/main/res/layout/fragment_sale_view_all.xml
@@ -15,8 +15,8 @@
             android:layout_height="54dp">
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:id="@+id/img_back"
                 android:src="@mipmap/btn_back_arrow"
                 android:layout_marginLeft="10dp"
@@ -71,8 +71,7 @@
             android:textColor="@color/white"
             android:textSize="15dp"
             style="@style/EditTextStyle"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="2dp" />
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
     <LinearLayout
@@ -80,13 +79,13 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:layout_below="@+id/top_layout">
 
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/lines_listview" />
+            android:id="@+id/lines_listview"
+            android:background="@color/light_grey3" />
     </LinearLayout>
 
 </RelativeLayout>
