- added sales backend

--- a/app/src/main/res/layout/sale_line_list_item.xml
+++ b/app/src/main/res/layout/sale_line_list_item.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="4dp" />
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$1,200,400"
             android:id="@+id/txt_price"
@@ -39,6 +39,7 @@
             android:layout_marginTop="3dp" />
 
         <TextView
+                android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="(48%)"
